--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="https://www.github.com/dystO2">Prayag Trivedi's GameZone</a>'s GAME ZONE</h1>
+    <h1><a href="https://www.github.com/dystO2">Prayag Trivedi</a>'s GAME ZONE</h1>
     <div id="games-list">
       <ul class="list-group list-group-flush">
         <li class="list-group-item"><a href="Memory/index.html">The YouTubers Memory Game</a></li>
